--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,7 +7,7 @@ services:
     ports:
       - 80:80
   gatotv:
-    image: agarciadealba/epg
+    image: agarciadealba/epg:999e1f32
     restart: always
     command: ["npm", "run", "grab", "--", "--site=gatotv.com", "--output=epg/gatotv.xml", "--cron=0 6,18 * * *"]
     # command: ["sleep", "3600"]
@@ -16,7 +16,7 @@ services:
     environment:
       NODE_ENV: production
   xumotv:
-    image: agarciadealba/epg
+    image: agarciadealba/epg:999e1f32
     restart: always
     command: ["npm", "run", "grab", "--", "--site=xumo.tv", "--output=epg/xumotv.xml", "--cron=5 6,18 * * *"]
     volumes:
@@ -24,7 +24,7 @@ services:
     environment:
       NODE_ENV: production
   mitv:
-    image: agarciadealba/epg
+    image: agarciadealba/epg:999e1f32
     restart: always
     command: ["npm", "run", "grab", "--", "--site=mi.tv", "--output=epg/mitv.xml", "--cron=10 0 * * *"]
     volumes:
@@ -32,7 +32,7 @@ services:
     environment:
       NODE_ENV: production
   ontvtonight:
-    image: agarciadealba/epg
+    image: agarciadealba/epg:999e1f32
     restart: always
     command: ["npm", "run", "grab", "--", "--site=ontvtonight.com", "--output=epg/ontvtonight.xml", "--cron=5 0 * * *"]
     volumes:
